clusters/loudnova/apps/paymentops/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-redis
  namespace: paymentops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentops-redis
  template:
    metadata:
      labels:
        app: paymentops-redis
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          args: ["redis-server", "--appendonly", "no"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            exec:
              command: ["sh", "-c", "redis-cli ping | grep -q PONG"]
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["sh", "-c", "redis-cli ping | grep -q PONG"]
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
