clusters/loudnova/apps/paymentops/base/address-structuring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentops-address-structuring
  namespace: paymentops
spec:
  type: ClusterIP
  selector:
    app: paymentops-address-structuring
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
