clusters/loudnova/apps/paymentops/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentops-api
  namespace: paymentops
spec:
  type: ClusterIP
  selector:
    app: paymentops-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
