clusters/loudnova/apps/paymentops/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentops-redis
  namespace: paymentops
spec:
  type: ClusterIP
  selector:
    app: paymentops-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
