clusters/loudnova/apps/paymentops/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentops-web
  namespace: paymentops
spec:
  type: ClusterIP
  selector:
    app: paymentops-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
